--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="user-scalable=no">
-  <title>PLACEHOLDER_ARTIST - Lossless Audio Stream</title>
+  <title>Salemtown - Lossless Audio Stream</title>
   <link rel="icon" href="./favicon.png" type="image/png">
   <link rel="stylesheet" href="./styles.css">
   <!-- New font -->
@@ -44,7 +44,7 @@
      <img id="albumArt" src="album_art.jpg" alt="Album Art">
      <div id="title">
        <span id="track"></span>
-       <a href="PLACEHOLDER_LINK" class="btn material-symbols-outlined" class="btn material-symbols-outlined" id="downloadBtn">file_download</a>
+       <a href="https://www.dropbox.com/scl/fi/eddpldwkwy5p5pnpfuc3a/S.E.X._mix-5_-1644-mastered.wav?rlkey=bnfjm9i4wj2hvohe5sme89rtw&dl=1" class="btn material-symbols-outlined" class="btn material-symbols-outlined" id="downloadBtn">file_download</a>
         <div id="timer">0:00</div>
         <div id="duration">0:00</div>
       </div> 
